# NeuroNet

./: .env.template  .gitignore  CMakeLists.txt  Documentation.md  LICENSE  README.md  load_env.sh  main.cpp  run_project.sh  run_tests.sh
include/: CloudStorage.h  DataLoader.h  GlobalFlags.h  HyperparameterTuner.h  LSTM.h  Logger.h  Loss.h  MSE.h  ModelServer.h  ModelVersioning.h  Monitoring.h  MultiModalDataLoader.h  NAS.h  NeuralNetwork.h  Optimizer.h  layer.h
src/: main.cpp
src/core/: CloudStorage.cpp  HyperparameterTuner.cpp  LSTM.cpp  Layer.cpp  Loss.cpp  MSE.cpp  ModelServer.cpp  ModelVersioning.cpp  Monitoring.cpp  MultiModalDataLoader.cpp  NAS.cpp  NeuralNetwork.cpp  Optimizer.cpp
src/utils/: DataLoader.cpp  Logger.cpp  global_flags.cpp
tests/integration/: test_main.cpp  test_neural_network.cpp
tests/system/: test_end_to_end.cpp
tests/unit/: test_layer.cpp  test_loss.cpp  test_optimizer.cpp
